--- a/ansible/arch.yaml
+++ b/ansible/arch.yaml
@@ -10,6 +10,7 @@
     aur_pkgs:
       - clicker-git
       - gnome-extensions-cli
+      - headsetcontrol-git
       - obs-cmd
       - webtorrent-mpv-hook
     pkgs:
@@ -104,7 +105,6 @@
       - chaotic-aur/ani-cli
       - chaotic-aur/deadbeef-git
       - chaotic-aur/fsearch
-      - chaotic-aur/headsetcontrol-git
       - chaotic-aur/insync
       - chaotic-aur/obs-studio-git
   tasks:
