--- a/ansible/arch.yaml
+++ b/ansible/arch.yaml
@@ -442,13 +442,14 @@
         cmd: "makepkg -sfi --noconfirm"
         creates: /usr/bin/yay
         
-    - name: Install AUR packages
+    - name: Instalar paquetes AUR
       become: yes
-      command: /usr/bin/yay -S --noconfirm {{ aur_pkgs }}
+      command: /usr/bin/yay -S --noconfirm {{ aur_pkgs | join(' ') }}
       args:
         executable: /bin/bash
       register: result
-      changed_when: "'installed' in result.stdout or 'upgraded' in result.stdout"  # Marca como cambiado si hay instalaciones o actualizaciones
+      changed_when: "'installed' in result.stdout or 'upgraded' in result.stdout"
+
     
     - name: Mostrar el resultado de la instalación
       debug:
