--- a/ansible/arch.yaml
+++ b/ansible/arch.yaml
@@ -109,6 +109,21 @@
       - chaotic-aur/insync
       - chaotic-aur/obs-studio-git
   tasks:
+    - name: Create the `aur_builder` user
+    become: yes
+    ansible.builtin.user:
+      name: aur_builder
+      create_home: yes
+      group: wheel
+  
+    - name: Allow the `aur_builder` user to run `sudo pacman` without a password
+      become: yes
+      ansible.builtin.lineinfile:
+        path: /etc/sudoers.d/11-install-aur_builder
+        line: 'aur_builder ALL=(ALL) NOPASSWD: /usr/bin/pacman'
+        create: yes
+        mode: 0644
+        validate: 'visudo -cf %s'
     # 1. Configuración de pacman.conf
     - name: Activar opciones en pacman.conf
       become: yes
@@ -435,6 +450,8 @@
         name: "{{ aur_helper }}"
     
     - name: Install AUR packages
+      become: yes
+      become_user: aur_builder
       kewlfft.aur.aur:
         name: "{{ aur_pkgs }}"
         state: present
