--- a/ansible/tasks/gnomerole.yml
+++ b/ansible/tasks/gnomerole.yml
@@ -1,6 +1,6 @@
 ---
 - name: Extensiones de GNOME
-- hosts: localhost
+  hosts: localhost
   roles:
     - role: PeterMosmans.customize-gnome
   vars:
