Edited executor conf to look prettier

--- a/dotfiles/extensions/executor.conf
+++ b/dotfiles/extensions/executor.conf
@@ -2,5 +2,6 @@
 center-active=false
 left-active=false
 location=2
-right-commands-json="{\"commands\":[{\"isActive\":true,\"command\":\"echo \\\"🎧\\\" && headsetcontrol -b | sed 's/Level://g' | grep %\",\"interval\":5,\"uuid\":\"58ce1d74-201a-4efd-beb4-b8cad9a5e9ec\"}]}"
-right-index=2
+right-commands-json="{\"commands\":[{\"isActive\":true,\"command\":\"echo \\\"🎧 \\\" && headsetcontrol -b | sed 's/Level://g' | grep % | sed 's/^[ \\\\t]*//'\",\"interval\":30,\"uuid\":\"9000f7c4-8c8e-48e4-b686-fdf4eda819ec\"}]}"
+right-index=9
+
