Changed to obs upstream and edited hotkeys

--- a/dotfiles/obsprofile.ini
+++ b/dotfiles/obsprofile.ini
@@ -109,5 +109,5 @@ PeakMeterType=0
 CookieId=9F94F37D48EDA6D7
 
 [Hotkeys]
-OBSBasic.StartRecording={"bindings":[{"shift":true,"control":true,"key":"OBS_KEY_F9"}]}
-OBSBasic.StopRecording={"bindings":[{"shift":true,"control":true,"key":"OBS_KEY_F11"}]}
+OBSBasic.StartRecording={"bindings":[{"key":"OBS_KEY_F9"}]}
+OBSBasic.StopRecording={"bindings":[{"key":"OBS_KEY_F10"}]}
