Reflector config, timer, not service

--- a/dotfiles/reflector.conf
+++ b/dotfiles/reflector.conf
@@ -1,5 +1,11 @@
 --save /etc/pacman.d/mirrorlist
 --protocol https
+
+--age 12
+--completion-percent 97
+--latest 30
+--score 15
+--fastest 5
+
+--sort rate
 --country US
---latest 5
---sort age
